# knx-sim

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  GUIDE.md  PROJECT_CONTEXT.md  SPEC.md
docs/notes/: cemi.md  dpt9.md  knxip.md
examples/: demo-house.yaml  demo-scenario.yaml  minimal.yaml
frontend/: README.md  index.html  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
knx_sim/: __init__.py  scenario.py  telegram_inject.py
knx_sim/bus/: __init__.py  router.py
knx_sim/cemi/: __init__.py  address.py  frame.py
knx_sim/cli/: __init__.py  __main__.py  main.py  monitor.py
knx_sim/config/: __init__.py  loader.py  models.py  registry.py
knx_sim/devices/: __init__.py  blind.py  device.py  dimmer.py  group_object.py  presence.py  switch.py  thermostat.py
knx_sim/dpt/: __init__.py  base.py  dpt1.py  dpt14.py  dpt3.py  dpt5.py  dpt7.py  dpt9.py
knx_sim/knxip/: __init__.py  _wire.py  dib.py  errors.py  frame.py  header.py  hpai.py  server.py  tunnel_channel.py  tunneling.py
knx_sim/web/: __init__.py  app.py  schemas.py
scripts/: compare_knxip_with_xknx.py  compare_with_xknx.py  generate_cemi_fixtures.py
tests/: test_demo_house_e2e.py  test_integration.py  test_knxip_integration.py  test_knxip_tunnel_integration.py  test_scenario.py  test_telegram_inject.py
tests/bus/: test_router.py
tests/cemi/: test_address.py  test_frame.py
tests/cli/: test_main.py  test_monitor.py
tests/config/: test_loader.py  test_models.py  test_registry.py
tests/devices/: test_blind.py  test_device.py  test_dimmer.py  (+4 more)
(+31 files in other folders)
